--- a/src/Shared/styles/base/_scheme.scss
+++ b/src/Shared/styles/base/_scheme.scss
@@ -1,6 +1,6 @@
 @import '../common';
 
 body {
-  color: $type-dark;
-  background-color: $background-muted;
+  color: $fg-base;
+  background-color: $bg-base;
 }
