--- a/src/Shared/layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Shared/layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,5 +1,11 @@
 @import '../../styles/common';
 
 .DefaultLayout {
-  @include container;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.Body {
+  margin: 0;
 }
