--- a/src/Shared/styles/mixins/_input.scss
+++ b/src/Shared/styles/mixins/_input.scss
@@ -23,7 +23,7 @@
     height: $size;
     border-radius: 3px;
     border: 1px solid #dddddd;
-    background: $background-bright;
+    background: $bg-bright;
   }
 
   input:checked + .label:after {
@@ -31,7 +31,7 @@
     @include pseudo();
     width: 0;
     height: 0;
-    border: 4px solid $background-selected;
+    border: 4px solid $bg-selected;
     border-radius: 1px;
   }
 
