--- a/src/Pages/templates/About/AboutTemplate.scss
+++ b/src/Pages/templates/About/AboutTemplate.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/styles/mixins/layout';
 
 .pages-about {
-  @include container-compact;
+  @include page;
+
+  .container {
+    @include container-compact;
+  }
 }
