--- a/src/Site/templates/ErrorNotFound/NotFoundTemplate.scss
+++ b/src/Site/templates/ErrorNotFound/NotFoundTemplate.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/styles/mixins/layout';
 
 .error-not-found {
-  @include container-compact;
+  @include page;
+
+  .container {
+    @include container-compact;
+  }
 }
