--- a/src/Docs/templates/Index/IndexTemplate.scss
+++ b/src/Docs/templates/Index/IndexTemplate.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/styles/mixins/layout';
 
 .docs-index {
-  @include container-compact;
+  @include page;
+
+  .container {
+    @include container-compact;
+  }
 }
