--- a/src/Docs/templates/Page/PageTemplate.scss
+++ b/src/Docs/templates/Page/PageTemplate.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/styles/mixins/layout';
 
 .docs-page {
-  @include container-compact;
+  @include page;
+
+  .container {
+    @include container-compact;
+  }
 }
