--- a/src/Pages/templates/Page/PageTemplate.scss
+++ b/src/Pages/templates/Page/PageTemplate.scss
@@ -1,5 +1,9 @@
 @import '../../../Shared/styles/mixins/layout';
 
 .pages-page {
-  @include container-compact;
+  @include page;
+
+  .container {
+    @include container-compact;
+  }
 }
