--- a/src/Blog/templates/Home/HomeTemplate.scss
+++ b/src/Blog/templates/Home/HomeTemplate.scss
@@ -1,9 +1,5 @@
-@import '../../../Shared/styles/mixins/layout';
+@import '../../../Shared/templates/BasePage.mixin';
 
 .blog-home {
-  @include page;
-
-  .container {
-    @include container-compact;
-  }
+  @include base-page;
 }
