--- a/src/Pages/templates/Page/PageTemplate.scss
+++ b/src/Pages/templates/Page/PageTemplate.scss
@@ -1,9 +1,5 @@
-@import '../../../Shared/styles/mixins/layout';
+@import '../../../Shared/templates/BasePage.mixin';
 
 .pages-page {
-  @include page;
-
-  .container {
-    @include container-compact;
-  }
+  @include base-page;
 }
