--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -1,18 +1,19 @@
 $color-primitives: (
   primary: hsl(1, 71%, 36%),
-  primary-fg: hsl(46, 15%, 83%),
-  secondary: hsl(216, 18%, 45%),
-  secondary-fg: hsl(210, 4%, 79%),
-  secondary-bg: hsl(216, 18%, 20%),
+  primary-bright: hsl(1, 68%, 38%),
+  primary-contrast: hsl(46, 15%, 83%),
+  secondary: hsl(205, 18%, 20%),
+  secondary-bright: hsl(216, 18%, 76%),
+  secondary-contrast: hsl(210, 4%, 79%),
   feature-bg: hsl(205, 22%, 83%),
   feature-alt: hsl(205, 22%, 59%),
-  bright: hsl(216, 18%, 97%),
-  dark: hsl(216, 11%, 14%),
+  bright: hsl(205, 18%, 97%),
+  dark: hsl(205, 14%, 16%),
   selected: hsl(95, 100%, 42%),
   interactive: hsl(205, 45%, 34%),
   interactive-bright: hsl(205, 57%, 74%),
   interactive-on: hsl(209, 100%, 57%)
-);
+) !default;
 $c: $color-primitives;
 
 $color-groups: (
@@ -20,24 +21,28 @@ $color-groups: (
     bg: map-get($c, 'bright'),
     fg: map-get($c, 'dark'),
     a: map-get($c, 'interactive'),
-    alt: map-get($c, 'primary')
+    active: map-get($c, 'interactive-on'),
+    alt: map-get($c, 'primary-bright')
   ),
   feature: (
     bg: map-get($c, 'feature-bg'),
     fg: map-get($c, 'dark'),
     a: map-get($c, 'interactive'),
+    active: map-get($c, 'interactive-on'),
     alt: map-get($c, 'feature-alt')
   ),
   primary: (
     bg: map-get($c, 'primary'),
-    fg: map-get($c, 'primary-fg'),
-    a: map-get($c, 'primary-fg'),
+    fg: map-get($c, 'primary-contrast'),
+    a: map-get($c, 'primary-contrast'),
+    active: map-get($c, 'bright'),
     alt: map-get($c, 'bright')
   ),
   secondary: (
-    bg: map-get($c, 'secondary-bg'),
-    fg: map-get($c, 'secondary-fg'),
+    bg: map-get($c, 'secondary'),
+    fg: map-get($c, 'secondary-contrast'),
     a: map-get($c, 'interactive-bright'),
+    active: map-get($c, 'interactive-on'),
     alt: map-get($c, 'bright')
   )
 );
