--- a/src/Shared/styles/settings/_color.scss
+++ b/src/Shared/styles/settings/_color.scss
@@ -3,8 +3,8 @@ $color-primitives: (
   primary-bright: hsl(1, 68%, 38%),
   primary-contrast: hsl(46, 15%, 83%),
   secondary: hsl(205, 18%, 20%),
-  secondary-bright: hsl(216, 18%, 76%),
-  secondary-contrast: hsl(210, 4%, 79%),
+  secondary-bright: hsl(205, 18%, 70%),
+  secondary-contrast: hsl(205, 4%, 79%),
   feature-bg: hsl(205, 22%, 83%),
   feature-alt: hsl(205, 22%, 59%),
   bright: hsl(205, 18%, 97%),
@@ -12,7 +12,7 @@ $color-primitives: (
   selected: hsl(95, 100%, 42%),
   interactive: hsl(205, 45%, 34%),
   interactive-bright: hsl(205, 57%, 74%),
-  interactive-on: hsl(209, 100%, 57%)
+  interactive-on: hsl(205, 100%, 57%)
 ) !default;
 $c: $color-primitives;
 
@@ -22,7 +22,8 @@ $color-groups: (
     fg: map-get($c, 'dark'),
     a: map-get($c, 'interactive'),
     active: map-get($c, 'interactive-on'),
-    alt: map-get($c, 'primary-bright')
+    alt: map-get($c, 'primary-bright'),
+    edge: map-get($c, 'feature-alt')
   ),
   feature: (
     bg: map-get($c, 'feature-bg'),
