show recent nodes under feed/ and home page
refactor routes containers and templates
- move containers next to templates, using a simple wrapper fn
- declare route interfaces in template units as well

--- a/src/Shared/blocks/NodeMeta/NodeMeta.scss
+++ b/src/Shared/blocks/NodeMeta/NodeMeta.scss
@@ -3,13 +3,12 @@
 .node-meta {
   @include type-small;
 
-  .node-published {
+  .node-published,
+  .tag-list {
     display: inline;
   }
 
   .tag-list {
-    display: inline;
-
     li {
       display: inline;
     }
