--- a/src/Taxonomy/blocks/TagList/TagList.scss
+++ b/src/Taxonomy/blocks/TagList/TagList.scss
@@ -1,5 +1,5 @@
 @import '../../../Shared/styles/mixins/reset';
-@import '../../../Shared/styles/mixins/responsive';
+@import '../../../Shared/styles/mixins/layout';
 @import '../../../Shared/styles/mixins/type';
 
 .tag-list {
@@ -7,6 +7,6 @@
   @include type-small;
 
   li {
-    padding-right: gap(small);
+    padding-right: gap('small');
   }
 }
