format checkboxes in markdown

--- a/src/Blog/elements/PostAbstract/PostAbstract.scss
+++ b/src/Blog/elements/PostAbstract/PostAbstract.scss
@@ -1,5 +1,5 @@
-@import '../../../Shared/styles/mixins/type';
+@import '../../../Shared/elements/Markdown/Markdown.mixins';
 
 .post-abstract {
-  @include copy;
+  @include markdown;
 }
