--- a/src/Blog/elements/PostContents/PostContents.scss
+++ b/src/Blog/elements/PostContents/PostContents.scss
@@ -1,5 +1,5 @@
-@import '../../../Shared/styles/mixins/type';
+@import '../../../Shared/elements/Markdown/Markdown.mixins';
 
 .post-contents {
-  @include copy;
+  @include markdown;
 }
