--- a/src/Meta/elements/MetaContents/MetaContents.scss
+++ b/src/Meta/elements/MetaContents/MetaContents.scss
@@ -1,5 +1,5 @@
-@import '../../../Shared/styles/mixins/type';
+@import '../../../Shared/elements/Markdown/Markdown.mixins';
 
 .meta-contents {
-  @include copy;
+  @include markdown;
 }
