--- a/src/Shared/styles/_settings.scss
+++ b/src/Shared/styles/_settings.scss
@@ -13,6 +13,7 @@ $defaults: (
   type-scale: $type-scale,
   type-families: $type-families,
   type-sizes: $type-sizes,
+  type-scalars: $type-scalars,
   type-heights: $type-heights,
   type-weights: $type-weights,
   type-faces: $type-faces,
