--- a/src/Shared/styles/settings/_space.scss
+++ b/src/Shared/styles/settings/_space.scss
@@ -1,10 +1,12 @@
 $space-unit: 10;
 
 $space-gaps: (
-  large: 4,
+  huge: 5,
+  large: 3,
   medium: 2,
   base: 1,
-  small: 1/2
+  small: 1/2,
+  tiny: 1/4
 );
 
 $-container-base: 37;
