--- a/src/Shared/elements/MarkdownBasic/MarkdownBasic.scss
+++ b/src/Shared/elements/MarkdownBasic/MarkdownBasic.scss
@@ -2,4 +2,12 @@
 
 .markdown-basic {
   @include markdown;
+
+  & > :first-child {
+    margin-top: 0;
+  }
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
 }
